# SEDER-Media-Suite-Video-Rewrap

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: icon.icns  seder-video-rewrap.desktop
docs/: USER_GUIDE.md  architecture.md  release.md
qt/: CMakeLists.txt  app.rc.in  resources.qrc
qt/include/: seder_video_rewrap_core.h
qt/qml/: AboutDialog.qml  AppMenuBar.qml  ErrorLogDialog.qml  ExportPanel.qml  FfmpegSettingsDialog.qml  HeaderBar.qml  Icons.qml  Main.qml  MonitorPanel.qml  ProjectPanel.qml  SButton.qml  SCheckBox.qml  SDialog.qml  SField.qml  SIcon.qml  SIconButton.qml  SMenu.qml  SMenuItem.qml  SMenuSeparator.qml  SPanel.qml  SPanelTabs.qml  SPill.qml  SProgressBar.qml  SScrollBar.qml  SSlider.qml  STimecodeLabel.qml  SToast.qml  SToolTip.qml  SegmentContextMenu.qml  SegmentsPanel.qml  ShortcutsDialog.qml  StatusBar.qml  Theme.qml  TimelineClip.qml  TimelinePanel.qml  TimelineView.qml  ToastHost.qml  TransportBar.qml  UpdateBanner.qml  WelcomeView.qml
qt/src/: AppController.cpp  AppController.h  ExportEngine.cpp  ExportEngine.h  FrameGrabber.cpp  FrameGrabber.h  FrameImageProvider.h  ProbeEngine.cpp  ProbeEngine.h  ProcessUtil.cpp  ProcessUtil.h  RecentFilesModel.cpp  RecentFilesModel.h  RustBridge.cpp  RustBridge.h  SegmentCommands.cpp  SegmentCommands.h  SegmentTableModel.cpp  SegmentTableModel.h  UiSettings.cpp  UiSettings.h  UpdateChecker.cpp  UpdateChecker.h  main.cpp  qt_msvc_stdext_compat.h  seder_version.h.in
qt/tests/: AppControllerTests.cpp  SegmentTableModelTests.cpp
scripts/: generate-icons.py  package-release.mjs
src/: ffi.rs  lib.rs  media_core.rs
src/media_core/: video_rewrap.rs  video_rewrap_tests.rs
